# Project_Mario

./: CMakeLists.txt
assets/sprite/: Back.aseprite  Buttons-Sheet.ase  Buttons.ase  Char1-Sheet.ase  Char1.ase  Char2-Sheet.ase  Char2.ase  GiaBao-Sheet.aseprite  GiaBao.aseprite  Level1.aseprite  Level2.aseprite  Level3.aseprite  SYouWIN.aseprite  SaveGameMenu.ase  Sprite-0001.aseprite  StartMenu.aseprite  ThanhTu-Sheet.aseprite  ThanhTu.aseprite  Title.ase  arrow.aseprite  brickBlock.aseprite  coin.aseprite  continue.aseprite  example .aseprite  heart.aseprite  soilBlock.aseprite  tilesetLevel2.aseprite  tilesets.aseprite  tree.aseprite
assets/testmap/: test.ldtk
assets/testmap/test/: Level_0.ldtkl
assets/testmap/test/simplified/Level_0/: data.json
assets/testmap/test/tiled/: Level_0.tmx  test.world
assets/textures/: GameOver.aseprite  MysteryBlock.aseprite
map/: mapsConfig.ldtk
src/: Animation.cpp  Animation.h  Application.cpp  Application.h  Block.cpp  Block.h  CMakeLists.txt  Caretaker.cpp  Caretaker.h  Character.cpp  Character.h  Command.h  CommandQueue.cpp  CommandQueue.h  ContinueState.cpp  ContinueState.h  DataTable.cpp  DataTable.h  DeathState.cpp  DeathState.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  GameState.cpp  GameState.h  Hub.cpp  Hub.h  ID.h  LevelSelectState.cpp  LevelSelectState.h  MenuState.cpp  MenuState.h  MovableBlock.cpp  MovableBlock.h  MusicPlayer.cpp  MusicPlayer.h  PauseState.cpp  PauseState.h  Pickup.cpp  (+29 more)
